fdo#36313: allow passing FilterOptions via cli

Examples:
  --infilter="Text (encoded):UTF8,LF,,,"
  --convert-to "html:XHTML Writer File:UTF8"
  --convert-to "txt:Text (encoded):UTF8"

Change-Id: I69a0524ef63f6d486637d68280331528d1001b56